--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     </button>
                 </div>
             </li>
-            <a href="#" id="close"><img src="/img/svg/close-bold-svgrepo-com.svg" alt=""></a>
+            <a href="#" id="close"><img src="img\svg\close-bold-svgrepo-com.svg" alt=""></a>
         </ul>
     </div>
     <div id="mobile">
@@ -107,7 +107,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img\svg\cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -146,7 +146,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img\svg\cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -185,7 +185,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -224,7 +224,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -263,7 +263,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -302,7 +302,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -341,7 +341,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -380,7 +380,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -430,7 +430,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -469,7 +469,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -508,7 +508,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                                 </div>
@@ -547,7 +547,7 @@
                                 <div class="product__item-action">
                                     <button class="addtocart">
                                         <span class="span-cart">
-                                            <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                            <img class="cart" src="img/svg/cart.svg" alt="cart">
                                         </span>
                                     </button>
                                 </div>
@@ -586,7 +586,7 @@
                                 <div class="product__item-action">
                                     <button class="addtocart">
                                         <span class="span-cart">
-                                            <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                            <img class="cart" src="img/svg/cart.svg" alt="cart">
                                         </span>
                                     </button>
                                 </div>
@@ -625,7 +625,7 @@
                                 <div class="product__item-action">
                                     <button class="addtocart">
                                         <span class="span-cart">
-                                            <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                            <img class="cart" src="img/svg/cart.svg" alt="cart">
                                         </span>
                                     </button>
                                 </div>
@@ -664,7 +664,7 @@
                                 <div class="product__item-action">
                                     <button class="addtocart">
                                         <span class="span-cart">
-                                            <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                            <img class="cart" src="img/svg/cart.svg" alt="cart">
                                         </span>
                                     </button>
                                 </div>
@@ -703,7 +703,7 @@
                                 <div class="product__item-action">
                                     <button class="addtocart">
                                         <span class="span-cart">
-                                            <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                            <img class="cart" src="img/svg/cart.svg" alt="cart">
                                         </span>
                                     </button>
                                 </div>
