--- a/shop.html
+++ b/shop.html
@@ -28,7 +28,7 @@
                     </button>
                 </div>
             </li>
-            <a href="#" id="close"><img src="/img/svg/close-bold-svgrepo-com.svg" alt=""></a>
+            <a href="#" id="close"><img src="img/svg/close-bold-svgrepo-com.svg" alt=""></a>
         </ul>
     </div>
     <div id="mobile">
@@ -75,7 +75,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -114,7 +114,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -153,7 +153,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -192,7 +192,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -231,7 +231,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -270,7 +270,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -309,7 +309,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -348,7 +348,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -387,7 +387,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -426,7 +426,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -465,7 +465,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -504,7 +504,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -543,7 +543,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -582,7 +582,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -621,7 +621,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
@@ -660,7 +660,7 @@
                     <div class="product__item-action">
                         <button class="addtocart">
                             <span class="span-cart">
-                                <img class="cart" src="/img/svg/cart.svg" alt="cart">
+                                <img class="cart" src="img/svg/cart.svg" alt="cart">
                             </span>
                         </button>
                     </div>
